PROJECT(FunCore)

SET(CMAKE_DEBUG_POSTFIX  "d")


ADD_DEFINITIONS(-DOSG4WEBCORE_LIBRARY)

SET(${PROJECT_NAME}_BIN_PATH "${PROJECT_NAME}")

SET("${PROJECT_NAME}_src" ${CMAKE_CURRENT_SOURCE_DIR}/src)
GRAB_FILES( "${PROJECT_NAME}_src" )

SET("${PROJECT_NAME}_include" ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET("${PROJECT_NAME}_includef" ${CMAKE_CURRENT_SOURCE_DIR}/include/FunCore)
GRAB_FILES( "${PROJECT_NAME}_includef" )

ADD_LIBRARY(${PROJECT_NAME}
	SHARED
	${${PROJECT_NAME}_includef_FILES}
    	${${PROJECT_NAME}_src_FILES}
    	${OSG4WEB_ROOT}/src/Engines/CoreBase/src/CoreBase.cpp
)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PROJECT_LABEL "Engine_${PROJECT_NAME}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

#INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIR} ${OSG4WEB_ROOT}/src/Engines/CoreBase/include ${${PROJECT_NAME}_include} )

INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_include} ${OSG_INCLUDE_DIR} ${OSG4WEB_ROOT}/src/Engines/CoreBase/include  ${OSG4WEB_ROOT}/include)

LINK_WITH_VARIABLES(${PROJECT_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGDB_LIBRARY OSGGA_LIBRARY OSGFX_LIBRARY OSGTEXT_LIBRARY OSGVIEWER_LIBRARY OPENTHREADS_LIBRARY)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommonCore)

SETUP_CORE_RUNTIME(Engine)

########################### test stuff ##################################
	CONFIGURE_FILE(${OSG4WEB_ROOT}/run_firefox.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake @ONLY)

	SET(HTML_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/html)
	CONFIGURE_FILE(${HTML_TEST_DIR}/${PROJECT_NAME}.html.in ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.html @ONLY)


	ADD_TEST(${PROJECT_NAME}_run_firefox ${CMAKE_COMMAND} -DURL=file:\"//${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.html\" -P ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake )
	ADD_TEST(Demo_VirtualRome_${PROJECT_NAME}_run_firefox ${CMAKE_COMMAND} -DURL=http://localhost/vrome/\" -P ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake )
	ADD_TEST(Demo2_VirtualRome_${PROJECT_NAME}_run_firefox ${CMAKE_COMMAND} -DURL=http://localhost:8080/vrome/htdocs/\" -P ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake )


INCLUDE(ModuleInstall OPTIONAL)

