PROJECT(CoreScribe)

SET(CMAKE_DEBUG_POSTFIX  "d")


ADD_DEFINITIONS(-DOSG4WEBCORE_LIBRARY)

SET(${PROJECT_NAME}_BIN_PATH "${PROJECT_NAME}")

SET("${PROJECT_NAME}_src" ${CMAKE_CURRENT_SOURCE_DIR}/src)
GRAB_FILES( "${PROJECT_NAME}_src" )

ADD_LIBRARY(${PROJECT_NAME}
	SHARED
    	${${PROJECT_NAME}_src_FILES}
    	${OSG4WEB_ROOT}/src/Engines/CoreBase/src/CoreBase.cpp
)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PROJECT_LABEL "Example_${PROJECT_NAME}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME core_run)

#INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIR} ${OSG4WEB_ROOT}/src/Engines/CoreBase/include ${${PROJECT_NAME}_include} )

INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_src} ${OSG_INCLUDE_DIR} ${OSG4WEB_ROOT}/src/Engines/CoreBase/include  ${OSG4WEB_ROOT}/include)

LINK_WITH_VARIABLES(${PROJECT_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGDB_LIBRARY OSGGA_LIBRARY OSGFX_LIBRARY OSGTEXT_LIBRARY OSGVIEWER_LIBRARY OPENTHREADS_LIBRARY)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommonCore)


########################### copy in debug place ###############################
		SET(DUMMY_SHA1 "test_${PROJECT_NAME}")
		SET(OUTPUT_Debug_DIR $ENV{APPDATA}/osg4web/${DUMMY_SHA1})
		SET(OUTPUT_Release_DIR $ENV{APPDATA}/osg4web/${DUMMY_SHA1})

		GET_TARGET_PROPERTY(${PROJECT_NAME}_Debug_LOCATION ${PROJECT_NAME} DEBUG_LOCATION)
		GET_TARGET_PROPERTY(${PROJECT_NAME}_Release_LOCATION ${PROJECT_NAME} RELEASE_LOCATION)
		GET_FILENAME_COMPONENT( MYNAME_Debug ${${PROJECT_NAME}_Debug_LOCATION} NAME)
		GET_FILENAME_COMPONENT( MYNAME_Release ${${PROJECT_NAME}_Release_LOCATION} NAME)
		ADD_CUSTOM_COMMAND(
			OUTPUT ${OUTPUT_Debug_DIR}/${MYNAME_Debug}
    			COMMAND ${CMAKE_COMMAND} -E copy ${${PROJECT_NAME}_Debug_LOCATION} ${OUTPUT_Debug_DIR}
    			DEPENDS ${PROJECT_NAME}
    		)
		ADD_CUSTOM_COMMAND(
			OUTPUT ${OUTPUT_Release_DIR}/${MYNAME_Release}
    			COMMAND ${CMAKE_COMMAND} -E copy ${${PROJECT_NAME}_Release_LOCATION} ${OUTPUT_Release_DIR}
    			DEPENDS ${PROJECT_NAME}
    		)

		ADD_CUSTOM_TARGET(Engine_${PROJECT_NAME}_Prepare_Debug
			DEPENDS ${OUTPUT_Debug_DIR}/${MYNAME_Debug}
			)
		ADD_CUSTOM_TARGET(Engine_${PROJECT_NAME}_Prepare_Release
			DEPENDS ${OUTPUT_Release_DIR}/${MYNAME_Release}
			)



########################### test stuff ##################################
	CONFIGURE_FILE(${OSG4WEB_ROOT}/run_firefox.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake @ONLY)

	SET(HTML_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/html)
	CONFIGURE_FILE(${HTML_TEST_DIR}/${PROJECT_NAME}.html.in ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.html @ONLY)


	ADD_TEST(${PROJECT_NAME}_run_firefox ${CMAKE_COMMAND} -DURL=file:\"//${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.html\" -P ${CMAKE_CURRENT_BINARY_DIR}/run_firefox.cmake )


INCLUDE(ModuleInstall OPTIONAL)

